Add profile image support
